fix: CLIENT-->Fixed marker offset to avoid placement shifting

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,6 @@ body {
 }
 
 .marker-btn img {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
